--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,8 @@
                     console.error( error );
                 } );
         </script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
         <script src="https://unpkg.com/infinite-scroll@3/dist/infinite-scroll.pkgd.js"></script>
     </body>
 </html>
