--- a/templates/animes/anime.show.html.twig
+++ b/templates/animes/anime.show.html.twig
@@ -51,8 +51,8 @@
                                                 <i class="fas fa-chevron-up"></i>
                                             </a>
                                         </div>
-                                        <div class="anime__comment__score">
-                                            <span>0</span>
+                                        <div id="{{ r.id }}" class="anime__comment__score">
+                                            <span>{{ r.vote }}</span>
                                         </div>
                                         <div class="anime__comment__thumbs_down">
                                             <a href="#">
