--- a/templates/front.base.html.twig
+++ b/templates/front.base.html.twig
@@ -40,7 +40,7 @@
             </div>
         </div>
     </div>
-    <main class="transition-fade">
+    <main id="swup" class="transition-fade">
         {% block content %}{% endblock %}
     </main>
     {% if app.user %}
