--- a/templates/animes/anime.result.html.twig
+++ b/templates/animes/anime.result.html.twig
@@ -8,7 +8,7 @@
                     <a href="{{ path('anime.show', { 'id' : a.id }) }}" class="anime__link">
                         <div class="card anime__card">
                             <div class="card_img__wrapper">
-                                <img class="card-img-top" src="{{ a.image }}" alt="{{ a.originalTitle }}">
+                                <img class="card-img-top" src="{{ asset('/uploads/images/anime_images/' ~ a.image) }}" alt="{{ a.originalTitle }}">
                                 <div class="card_img_overlay">
                                     <div class="card_img_overlay_content">
                                         <div class="anime__card__anime__tag">
