--- a/templates/pages/pageArs.html.twig
+++ b/templates/pages/pageArs.html.twig
@@ -12,8 +12,8 @@
                     disposition de tous les fans d'anime un catalogue de choix. Vous cherchez un nouvel anime à
                     regarder ? Vous avez déjà tout vu ?Internet n'a plus de secret pour vous ? Vous ne voulez pas vous
                     lancer dans un anime alors que toute l'intrigue va s'écrouler à l'épisode 127 de la saison 3 ?
-                    Et bien dans ce cas ce site est fait pour vous ! Nous sommes nous-même fans de mangas et d'animes,
-                    et c'est pour cette raison que le projet ARS est né.</p>
+                    Et bien dans ce cas ce site est fait pour vous ! Nous sommes nous-même fans de mangas et
+                    d'animes, et c'est pour cette raison que le projet ARS est né.</p>
 
                 <p>J'espère que vous participerez et découvrirez plein de choses sur notre site ;)</p>
 
