--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -660,6 +660,20 @@ ul.pagination {
     box-shadow: none !important;
 }
 
+.user h2 {
+    margin: 15px 0 20px 0;
+}
+
+.user .review_caption {
+    background: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    transition: all, 0.25s;
+}
+
+.user .review_caption {
+    opacity: 1;
+}
+
 .anime__list {
     margin-top: 110px;
     transition: all, 0.25s;
@@ -827,6 +841,11 @@ ul.pagination {
     border-radius: 2px;
 }
 
+.anime__image__wrapper .youtube {
+    height: initial;
+    padding-top: 4px;
+}
+
 .anime__image__wrapper .btn-primary {
     position: absolute;
     z-index: 997;
@@ -906,6 +925,21 @@ ul.pagination {
     position: relative;
     overflow: hidden;
     box-shadow: 0px 2px 5px 0 rgba(0, 0, 0, 0.20);
+}
+
+.anime__comment_show a {
+    color: #1194d3;
+}
+
+#review_comment {
+    height: 200px;
+    border: none;
+    box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.2);
+}
+
+.anime__comment__score span {
+    font-size: 18px;
+    font-weight: 700;
 }
 
 .ck-editor {
@@ -1307,7 +1341,10 @@ ul.social-network {
     color: #355e7e;
     padding: 0 18px;
     width: 100%;
-    text-align: center;
+}
+
+.contact__content label {
+    display: none;
 }
 
 .contact__content form h1 {
@@ -1378,6 +1415,11 @@ ul.social-network {
 
 }
 
+.contact__content .form-control:focus {
+    box-shadow: none !important;
+    border-color: #1194d3 !important;
+}
+
 .contact__content .form-group {
     overflow: hidden;
     clear: both;
@@ -1393,15 +1435,16 @@ ul.social-network {
 }
 
 .bouton-contact {
-    background-color: #6fd1f3;
+    background-color: #1194d3;
     color: #FFF;
     text-align: center;
     width: 100%;
     border: 0;
-    padding: 17px 25px;
-    border-radius: 5px;
+    padding: 15px;
+    border-radius: 2px;
     cursor: pointer;
     font-size: 18px;
+    box-shadow: 0px 1px 5px 0 rgba(0, 0, 0, 0.4);
 }
 
 .validation {
